feat : Betting 객체 구현